<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:id="@+id/id_main2_coordinate_layout"
    tools:context="com.example.pavani.movieinfo.MovieInDetailActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:id="@+id/id_appBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingToolBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:id="@+id/image_poster"
                app:layout_collapseMode="parallax"
                android:src="@mipmap/ic_launcher_round"/>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/id_nested_scroll_view"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ash_color_text_back_ground"
                    android:fontFamily="casual"
                    android:text="@string/text_title"
                android:layout_marginBottom="@dimen/title_bottom"
                    android:textAlignment="center"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="italic" />
                <include layout="@layout/poster_vote"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_fav"
                        android:fontFamily="casual"
                        android:padding="@dimen/button_padding"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/border"
                        android:layout_marginTop="@dimen/button_margin_top"
                        android:layout_marginBottom="@dimen/button_margin_bottom"
                        android:id="@+id/fav_button"
                        />
                </LinearLayout>
            <include layout="@layout/synopsis"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/synopsis_below_margin_bottom"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_movie_black_24dp"
                    android:padding="@dimen/image_view_padding"
                    android:layout_marginTop="@dimen/image_view_margin_top"
                    android:layout_marginBottom="@dimen/margin_bottom_image_view"
                    android:layout_marginLeft="@dimen/image_view_margin_left"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_videos"
                    android:padding="@dimen/image_text_padding"
                    android:layout_marginTop="@dimen/margin_top_text_image"
                    android:text="@string/trailer_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="casual"
                    android:layout_marginBottom="@dimen/image_tv_margin_bottom"
                    android:textSize="@dimen/image_tv_text_size"/>

            </LinearLayout>
            <include layout="@layout/video_rv"></include>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/image_view_width_review"
                    android:layout_height="@dimen/image_view_height_assert"
                    android:layout_marginLeft="@dimen/image_view_margin_left"

                    android:src="@drawable/review"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tv_asses_padding"
                    android:id="@+id/tv_assess"
                    android:text="@string/assesment_text_view"
                    android:fontFamily="casual"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/asses_text_size"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/asses_rv"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
